--- a/assets/src/admin.html
+++ b/assets/src/admin.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.0.7/datatables.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.8/datatables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
@@ -217,13 +217,13 @@
                             <input type="text" class="form-control" placeholder="English" name="english" />
                         </div>
                         <div class="my-3">
-                            <input type="text" class="form-control" placeholder="Math" name="math" />
+                            <input type="text" class="form-control" placeholder="Mathematics" name="math" />
                         </div>
                         <div class="my-3">
                             <input type="text" class="form-control" placeholder="Science" name="science" />
                         </div>
                         <div class="my-3">
-                            <input type="text" class="form-control" placeholder="Social" name="social" />
+                            <input type="text" class="form-control" placeholder="Social Science" name="social" />
                         </div>
                         <div class="my-3">
                             <input type="text" class="form-control" placeholder="Religion" name="religion" />
@@ -282,16 +282,19 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.8/datatables.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.0.7/datatables.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="./src/data.js"></script>
-    <script src="./src/functions.js"></script>
-    <script src="./src/models.js"></script> -->
+    <!-- <script src="./src/data.js"></script> -->
+    <script src="./function.js"></script>
+    <!-- <script src="./src/models.js"></script>  -->
     <script src="./main.js"></script>
     <script>
         $("#studentTable").DataTable();
     </script>
+
 </body>
 
 </html>
