result.html added

--- a/assets/src/result.html
+++ b/assets/src/result.html
@@ -28,110 +28,7 @@
                     </p>
                 </div>
             </div>
-            <div class="edu-body">
-                <div class="result-sheet">
-                    <h2>SSC/Dakhil/Equivalent Result-2024</h2>
-                    <div class="edu-student-info">
-                        <table>
-                            <tr>
-                                <td class="bg-white"></td>
-                                <td class="bg-white"></td>
-                                <td class="bg-white"></td>
-                                <td class="bg-white text-end"><img class="shadow-sm"
-                                        src="http://www.educationboardresults.gov.bd/images/bd_logo.png" alt=""></td>
-                            </tr>
-                            <tr>
-                                <td>Roll No</td>
-                                <td>149971</td>
-                                <td>Name</td>
-                                <td>ANAMUL MAHATO</td>
-                            </tr>
-                            <tr>
-                                <td>Board</td>
-                                <td>Rajshahi</td>
-                                <td>Father's Name</td>
-                                <td>ANAMUL MAHATO</td>
-                            </tr>
-                            <tr>
-                                <td>Group</td>
-                                <td>149971</td>
-                                <td>Mother's Name</td>
-                                <td>ANAMUL MAHATO</td>
-                            </tr>
-                            <tr>
-                                <td>Type</td>
-                                <td>149971</td>
-                                <td>Date of Birth</td>
-                                <td>ANAMUL MAHATO</td>
-                            </tr>
-                            <tr>
-                                <td>Result</td>
-                                <td>149971</td>
-                                <td>Institute</td>
-                                <td>ANAMUL MAHATO</td>
-                            </tr>
-                            <tr>
-                                <td>GPA</td>
-                                <td colspan="3">4.8</td>
-
-                            </tr>
-
-                        </table>
-                    </div>
-                    <h2>Grade Sheet</h2>
-                    <div class="edu-student-grade-sheet">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Code </th>
-                                    <th>Subject</th>
-                                    <th>Grade</th>
-                                    <th>GPA</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>101</td>
-                                    <td>Bangla</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                                <tr>
-                                    <td>102</td>
-                                    <td>English</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                                <tr>
-                                    <td>103</td>
-                                    <td>Mathematics</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                                <tr>
-                                    <td>104</td>
-                                    <td>Science</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                                <tr>
-                                    <td>105</td>
-                                    <td>Social Science</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                                <tr>
-                                    <td>106</td>
-                                    <td>Religion</td>
-                                    <td>A-</td>
-                                    <td>3.5</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <a href="">Search Again</a>
-                    </div>
-                </div>
-            </div>
+            <div class="edu-body" id="mark-sheet"></div>
             <div class="edu-footer">
                 <p> ©2005-2024 Ministry of Education, All rights reserved.</p>
                 <ul>
@@ -144,6 +41,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./result.js"></script>
+    <script src="./function.js"></script>
 </body>
 
 </html>
