--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -30,53 +30,104 @@
             </div>
             <div class="edu-body">
                 <div class="result-form">
-                    <div class="form">
+                    <form id="result-search-form">
                         <div class="form-fields-row">
                             <label for="">Examination </label>
                             <span>:</span>
 
-                            <select name="" id="">
-                                <option value=""></option>
+                            <select name="examination" id="">
+
+                                <option value="ssc">SSC/Dakhil/Equivalent</option>
+                                <option value="jsc">JSC/JDC</option>
+                                <option value="ssc">SSC/Dakhil</option>
+                                <option value="ssc_voc">SSC(Vocational)</option>
+                                <option value="hsc">HSC/Alim</option>
+                                <option value="hsc_voc">HSC(Vocational)</option>
+                                <option value="hsc_hbm">HSC(BM)</option>
+                                <option value="hsc_dic">Diploma in Commerce</option>
+                                <option value="hsc">Diploma in Business Studies</option>
+
                             </select>
                         </div>
                         <div class="form-fields-row">
                             <label for="">Year </label>
                             <span>:</span>
 
-                            <select name="" id="">
-                                <option value=""></option>
+                            <select name="year" id="">
+                                <option value="2024">Select a Year</option>
+                                <option value="2024">2024</option>
+                                <option value="2023">2023</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                                <option value="2020">2020</option>
+                                <option value="2019">2019</option>
+                                <option value="2018">2018</option>
+                                <option value="2017">2017</option>
+                                <option value="2016">2016</option>
+                                <option value="2015">2015</option>
+                                <option value="2014">2014</option>
+                                <option value="2013">2013</option>
+                                <option value="2012">2012</option>
+                                <option value="2011">2011</option>
+                                <option value="2010">2010</option>
+                                <option value="2009">2009</option>
+                                <option value="2008">2008</option>
+                                <option value="2007">2007</option>
+                                <option value="2006">2006</option>
+                                <option value="2005">2005</option>
+                                <option value="2004">2004</option>
+                                <option value="2003">2003</option>
+                                <option value="2002">2002</option>
+                                <option value="2001">2001</option>
+                                <option value="2000">2000</option>
+                                <option value="1999">1999</option>
+                                <option value="1998">1998</option>
+                                <option value="1997">1997</option>
+                                <option value="1996">1996</option>
                             </select>
                         </div>
                         <div class="form-fields-row">
                             <label for="">Board </label>
                             <span>:</span>
 
-                            <select name="" id="">
-                                <option value=""></option>
+                            <select name="board" id="">
+                                <option value="" selected="">Select Board</option>
+                                <option value="barisal">Barisal</option>
+                                <option value="chittagong">Chittagong</option>
+                                <option value="comilla">Comilla</option>
+                                <option value="dhaka">Dhaka</option>
+                                <option value="dinajpur">Dinajpur</option>
+                                <option value="jessore">Jessore</option>
+                                <option value="mymensingh">Mymensingh</option>
+                                <option value="rajshahi">Rajshahi</option>
+                                <option value="sylhet">Sylhet</option>
+                                <option value="madrasah">Madrasah</option>
+                                <option value="tec">Technical</option>
+                                <option value="dibs">DIBS(Dhaka)</option>
                             </select>
                         </div>
                         <div class="form-fields-row">
                             <label for="">Roll </label>
                             <span>:</span>
 
-                            <input type="text">
+                            <input type="text" name="roll">
                         </div>
                         <div class="form-fields-row">
                             <label for=""> Reg: No </label>
                             <span>:</span>
 
-                            <input type="text">
+                            <input type="text" name="reg">
                         </div>
                         <div class="form-fields-row">
-                            <label for="">6 + 6 </label>
+                            <label id="edu-pzl" for=""> </label>
                             <span>:</span>
-                            <input type="text">
+                            <input type="text"  name="pzl">
                         </div>
-                        <div class="form-fields-row btns">
-                            <button>Reset</button>
-                            <button>Submit</button>
+                        <div class=" btns ">
+                            <button type="reset" class="btn btn-danger">Reset</button>
+                            <button type="submit" class="btn btn-success">Submit</button>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
             <div class="edu-footer">
@@ -91,6 +142,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
+    <script src="./function.js"></script>
 </body>
 
 </html>
